Implement spring-security with JWT based authentication
